np-99992-990002-1002-dev-bad-egress-allow-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99992-990002-1002-dev
  name: 99992-990002-1002-dev.bad-egress-allow-all-policy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99992-990002-1001-dev
      ports:
        - protocol: TCP
          port: 443
  egress:
    - {}
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
